[package]
name = "hub-core"
version = "0.1.0"
edition = "2021"
authors = ["Maxime THEVENEAU <maxime.theveneau@epitech.eu>"]
license = "MIT OR Apache-2.0"

[dependencies]
# Shared dependency (PC + ESP)
log = "0.4.28"

# --- ESP32-specific deps: only used when building for xtensa-esp32-none-elf ---

[target.xtensa-esp32-none-elf.dependencies]
esp-hal = { version = "1.0.0", features = ["esp32", "unstable"] }
esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }
esp-rtos = { version = "0.2.0", features = ["esp32", "embassy", "log-04"] }
esp-sync = { version = "0.1.1", features = ["esp32"] }
esp-rom-sys = { version = "0.1.3", features = ["esp32"] }

embassy-executor = "0.9.1"
embassy-time     = "0.5.0"

[profile.dev]
opt-level = "s"
panic = "abort"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
panic = "abort"

# --- Binaries ---

[[bin]]
name = "hub-core-host"
path = "src/main.rs"

[[bin]]
name = "hub-core-fw"
path = "src/bin/firmware.rs"